# GA_lapagos

./: .gitignore  LICENSE  README.md
GA_lapagos/: CMakeLists.txt  GA_lapagos_timing  README.txt
GA_lapagos/EXPERIMENTS/TSP_ENCODING_XOVERS_ANALYSIS_APRIL7_2020/: 000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS0BE.test_out  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS0BE.xml  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS1BE.test_out  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS1BE.xml  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS2BE.test_out  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS2BE.xml  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS3BE.test_out  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS3BE.xml  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS4BE.test_out  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS4BE.xml  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS5BE.test_out  000XSPMXXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS5BE.xml  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS0BE.test_out  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS0BE.xml  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS1BE.test_out  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS1BE.xml  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS2BE.test_out  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS2BE.xml  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS3BE.test_out  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS3BE.xml  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS4BE.test_out  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS4BE.xml  001XSPOSITIONXE_SSROULETTESE_PSADJACENCY_PERMUTATIONPE_ESGENERATIONSEE_BS5BE.test_out  (+131 more)
GA_lapagos/LIBS/: CMakeLists.txt
GA_lapagos/LIBS/libxml2-2.9.9/: config.status  configure  libtool  (+3 more)
GA_lapagos/SANDBOX/: .gdbinit  008XSUPLXXE_SSROULETTESE_PSADJACENCY_LEHMERPE_ESGENERATIONSEE_BS0BE.xml  config.xml  config_mkp.xml  config_tsp.xml  run_valgrind.sh
GA_lapagos/SCRIPTS/: execute_list_of_files.py  test_and_compare_to_golden.py  write_config_benchmark_for_experiments.py  write_config_benchmark_for_tests.py
GA_lapagos/SRC/: GA_lapagos.cpp  GA_lapagos.h  analyze_genomes.cpp  analyze_genomes.h  generate_hw.cpp  generate_hw.h  generate_static_memory.cpp  generate_static_memory.h  genetic_algorithm.cpp  genetic_algorithm.h  genetic_algorithm_bit_crossovers.cpp  genetic_algorithm_bit_crossovers.h  genetic_algorithm_combinational_crossovers.cpp  genetic_algorithm_combinational_crossovers.h  genetic_algorithm_combinational_crossovers_hw.cpp  genetic_algorithm_combinational_crossovers_hw.h  genetic_algorithm_combinational_crossovers_lehmer_encoding.cpp  genetic_algorithm_combinational_crossovers_lehmer_encoding.h  genetic_algorithm_crossovers.cpp  genetic_algorithm_crossovers.h  genetic_algorithm_hw.cpp  genetic_algorithm_hw.h  genetic_algorithm_selectors.cpp  genetic_algorithm_selectors.h  genetic_algorithm_selectors_hw.cpp  genetic_algorithm_selectors_hw.h  genetic_algorithm_threaded.cpp  genetic_algorithm_threaded.h  globals.h  lehmer_encoding.cpp  random_key_encoding.cpp  read_xml_config_file.cpp  read_xml_config_file.h  thread_utils.cpp  thread_utils.h  types.h  utils.cpp  utils.h
GA_lapagos/TESTS/: README.txt  gmon.out  master_list_of_tests.txt  mkp_testing_SINGLE_POINT_RANDOM_DAT_FORMAT_FIX.xml  mkp_testing_SINGLE_POINT_RANDOM_DAT_FORMAT_PENALTY.xml  mkp_testing_SINGLE_POINT_RANK_DAT_FORMAT_FIX.xml  mkp_testing_SINGLE_POINT_RANK_DAT_FORMAT_PENALTY.xml  mkp_testing_SINGLE_POINT_ROULETTE_DAT_FORMAT_FIX.xml  mkp_testing_SINGLE_POINT_ROULETTE_DAT_FORMAT_PENALTY.xml  mkp_testing_SINGLE_POINT_SUS_DAT_FORMAT_FIX.xml  mkp_testing_SINGLE_POINT_SUS_DAT_FORMAT_PENALTY.xml  mkp_testing_SINGLE_POINT_TOURNAMENT_DAT_FORMAT_FIX.xml  mkp_testing_SINGLE_POINT_TOURNAMENT_DAT_FORMAT_PENALTY.xml  mkp_testing_SINGLE_POINT_TRUNCATE_DAT_FORMAT_FIX.xml  mkp_testing_SINGLE_POINT_TRUNCATE_DAT_FORMAT_PENALTY.xml  mkp_testing_TWO_POINT_RANDOM_DAT_FORMAT_FIX.xml  mkp_testing_TWO_POINT_RANDOM_DAT_FORMAT_PENALTY.xml  mkp_testing_TWO_POINT_RANK_DAT_FORMAT_FIX.xml  mkp_testing_TWO_POINT_RANK_DAT_FORMAT_PENALTY.xml  mkp_testing_TWO_POINT_ROULETTE_DAT_FORMAT_FIX.xml  mkp_testing_TWO_POINT_ROULETTE_DAT_FORMAT_PENALTY.xml  mkp_testing_TWO_POINT_SUS_DAT_FORMAT_FIX.xml  mkp_testing_TWO_POINT_SUS_DAT_FORMAT_PENALTY.xml  mkp_testing_TWO_POINT_TOURNAMENT_DAT_FORMAT_FIX.xml  mkp_testing_TWO_POINT_TOURNAMENT_DAT_FORMAT_PENALTY.xml  mkp_testing_TWO_POINT_TRUNCATE_DAT_FORMAT_FIX.xml  mkp_testing_TWO_POINT_TRUNCATE_DAT_FORMAT_PENALTY.xml  mkp_testing_UNIFORM_RANDOM_DAT_FORMAT_FIX.xml  mkp_testing_UNIFORM_RANDOM_DAT_FORMAT_PENALTY.xml  mkp_testing_UNIFORM_RANK_DAT_FORMAT_FIX.xml  mkp_testing_UNIFORM_RANK_DAT_FORMAT_PENALTY.xml  mkp_testing_UNIFORM_ROULETTE_DAT_FORMAT_FIX.xml  mkp_testing_UNIFORM_ROULETTE_DAT_FORMAT_PENALTY.xml  mkp_testing_UNIFORM_SUS_DAT_FORMAT_FIX.xml  mkp_testing_UNIFORM_SUS_DAT_FORMAT_PENALTY.xml  mkp_testing_UNIFORM_TOURNAMENT_DAT_FORMAT_FIX.xml  mkp_testing_UNIFORM_TOURNAMENT_DAT_FORMAT_PENALTY.xml  mkp_testing_UNIFORM_TRUNCATE_DAT_FORMAT_FIX.xml  mkp_testing_UNIFORM_TRUNCATE_DAT_FORMAT_PENALTY.xml  mkp_testing_list_config_files.txt  (+50 more)
GA_lapagos/TSP_CUDA_GPU_EXAMPLE/: GA_lapagos_cuda_debugged_on_colab.c  GA_lapagos_cuda_debugged_on_colab_a280.c  GA_lapagos_cuda_debugged_on_colab_d198.c  README.txt  a280_gpu_out.txt  d198_gpu_out.txt
GA_lapagos/TSP_HLS_EXAMPLE/: GA_lapagos_hw_a280.c  GA_lapagos_hw_d198.c  README_how_to_convert.txtx  a280_bm_config.xml  a280_bm_hardware.out  call_graph.mkp  config.tcl  d198_bm_config.xml  d198_bm_hardware.out  temp_Makefile  tsp_types.h  types.h
(+1165 files in other folders)
